synaptic (0.60.1) unstable; urgency=low

  * fix missing Basque translation (closes: #429460)
  * update galician translation (thanks to Ignacio Casal)

 --

synaptic (0.60) unstable; urgency=low

  * moved most icons use the icontheme
  * support repmod on rpm systems
  * when switching views, don't autoselect "AlL"
  * gtk/gsyncaptic.cc:
    - fix in the checking for already runing synaptic (lp: 62754)
  * gtk/rgfilterwindow.cc:
    - fix i18n problem in the filter settings 
      (thanks to Alexander Bart)
  * help/sv:
    - added swedish manual (thanks to Daniel Nylander)
      closes: #384388
  * added support for GUI configuraton of http proxy
  * translation updates:
    - cs.po: thanks to Vít Pelcak
  * debian/rules: 
    - fix automatic version number generation
  * make description buffer dynamic (thanks to Benjamin Jacobs)
  * added component filter
  * added emblem in the description to show support status
  * move the desktop file out of settings because it does no longer
    fit there with the new control center in gnome 2.17
  * build with gcc 4.3 (closes: #413419)
  * do not return a NULL pointer in name() 
  * when generating the wget script, use wget -c
  * po/cs.po:
    - updated (thanks to Vit Pelcak)
  * gtk/rguserdialog.cc, gtk/rggladewindow.cc:
    - do not crash for invalid parent-window-ids
  * gtk/rgpreferenceswindow.cc:
    - overwrite the http_proxy environ when the user set the proxy
      explicitely (thanks to Berend De Schouwer)
  * common/rpackagelister.cc:
    - added "Volatile::SetSelectionDoReInstall" to support 
      reinstalling from --set-selections too
  * common/rpackage.cc:
    - only show a package as supported if it is authenticated
  * po/eu.po:
    - updated (thanks to dooteo, closes: #368951)
  * merged gcc 4.3 compiler fix, closes: #413419
    (thanks to Martin Michlmayr)
  * merged support for translated package description
  * merged support for automatic removal of unused dependencies