@@ -73,22 +73,11 @@ gtk/glade/dialog_upgrade.glade
 gtk/glade/dialog_task_descr.glade
 data/synaptic.desktop.in
 data/synaptic-kde.desktop.in
-#wings/rwaboutpanel.cc
-#wings/rwcacheprogress.cc
-#wings/rwconfigwindow.cc
-#wings/rwdummyinstallprogress.cc
-#wings/rwfetchprogress.cc
-#wings/rwfiltereditor.cc
-#wings/rwfiltermanager.cc
-#wings/rwfilterwindow.cc
-#wings/rwinstallprogress.cc
-#wings/rwmainwindow.cc
-#wings/rwsourceswindow.cc
-#wings/rwsummarywindow.cc
-#wings/rwwindow.cc
-#wings/synaptic.cc
 gtk/rgfiltermanager.h
 gtk/rgpkgcdrom.cc
 gtk/rgiconlegend.cc
 gtk/rgmisc.cc
 gtk/rgterminstallprogress.cc
+gtk/glade/dialog_authentication.glade
+gtk/glade/dialog_disc_label.glade
+gtk/glade/dialog_new_repositroy.glade
