@@ -1,1 +1,23 @@
 common/pkg_acqfile.cc
+
+# deprecated UI
+wings/rwaboutpanel.cc
+wings/rwconfigwindow.cc
+wings/rwfetchprogress.cc
+wings/rwfiltereditor.cc
+wings/rwfiltermanager.cc
+wings/rwfilterwindow.cc
+wings/rwinstallprogress.cc
+wings/rwmainwindow.cc
+wings/rwsourceswindow.cc
+wings/rwsummarywindow.cc
+wings/rwuserdialog.cc
+wings/synaptic.cc
+
+# unused glade files
+gtk/glade/dialog_columns.glade
+gtk/glade/dialog_example.glade
+gtk/glade/dialog_proposed_new_repositories.glade
+gtk/glade/druid_repository.glade
+gtk/glade/window_install_progress.glade
+gtk/glade/window_procceed.glade
