@@ -2,6 +2,9 @@ synaptic (0.60.1) unstable; urgency=low
 
   * fix missing Basque translation (closes: #429460)
   * update galician translation (thanks to Ignacio Casal)
+  * po/POTFILES.in, po/POTFILES.skip:
+    - updated so that intltool-update -m is happy again (thanks
+      to Nacho)
 
  --
 
